all section finished

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="tours-container">
                 <h1>Our Popular Tours</h1>
                 <p>
-                   People go for a tour or with family. They enjoy a lot. But when it comes with us it boosts rapidly. So why you chose our tour plan? We give people more comfort than ony other does. Here is some examples of it :
+                   People go for a tour or with family. They enjoy a lot. But when it comes with us it boosts rapidly. So why you choose our tour plan? We give people more comfort than ony other does. Here is some examples of it :
                 </p>
                 <ul>
                     <li>First of all you can make a wonderful tour plan around the world with us. You will get every step guide when you are with us.</li>
@@ -82,7 +82,7 @@
             <img src="Images/Rectangle 4.png" alt="">
         </section>
         <section class="destination-section">
-            <h1>Chose Yoionur Destination</h1>
+            <h1>Choose Your Destination</h1>
             <p>
                  A lot of people around the world travel every year to many places. Traveling opens a big door for us to explore the world beyond our imagination and indulge in many things. 
             </p>
@@ -116,7 +116,192 @@
                 </div>
             </div>
         </section>
+        <section class="destination-choosing-section">
+            <div class="destination-choosing-section-title-and-description">
+                <h1 class="destination-choosing-section-title">Why choose us</h1>
+                <p class="destination-choosing-section-title-description">
+                    You can enjoy a lot if you involve with us. A renowned institution can acquire you trust. It is a normal thing. <br>As we are one of the most renowned institution you can choose us directly.
+                </p>
+            </div>
+            <div class="card-container">
+                <div class="hotel-card">
+                    <img src="icons/icons8-hotel-48.png" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>
+                        We can offer you all the hotels around the world and you can pick your best one for your vacation. If you want to make your vacation more interesting you can choose us for selecting hotel.
+                    </p>
+                </div>
+                <div class="map-card">
+                    <img src="icons/icons8-map-32.png" alt="">
+                    <h3>World class service</h3>
+                    <p>
+                        For a gentleman, he will always want for a world class service for him or his family and that's way we are here. We can ensure you a world class service for every corner of the world.
+                    </p>
+                </div>
+            </div>
+            <div class="discount-card-container">
+                <div class="discount-card">
+                    <img src="icons/icons8-discount-64 (1).png" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p>
+                        A vacation is always expensive. It is a pocket cutter. But we are here to save your pocket. Only we can save your pocket as much that any other can't.
+                    </p>
+                </div>
+            </div>
+       </section>
+       <section class="discount-section">
+        <div class="discount-section-header">
+            <h1>Deals & Discounts</h1>
+            <p>
+                We have massive discounts on every Packages. A huge discount can be archived by you. <br> So, don't miss it out. Book your vacation place naw.
+            </p>
+        </div>
+        <div class="satorini-tour-container">
+            <div class="satorini-tour">
+                <div class="tour-details-container">
+                    <div class="tour-details">
+                        <img src="icons/icons8-clock.svg" alt="">
+                        <p>7 Days / 6 Nights</p>
+                    </div>
+                    <div class="tour-details">
+                        <img src="icons/icons8-crowd-25.png" alt="">
+                        <p>Max 10</p>
+                        <img src="icons/icons8-region-25.png" alt="">
+                        <p>Malaysia</p>
+                    </div>
+                </div>
+                <h3>Tour to Santorini</h3>
+                <p class="tour-description">
+                    Discover the very best of the island during a thrilling sailing tour.<span class="hidden">Take part in one of the most spectacular Santorini day tours during a half-day morning, half-day sunset, or full-day private sailing tour.</span>
+                </p>
+                <p class="tour-cost orange-text">
+                    Price : $1300-$1500
+                </p>
+                <button class="btn-primary">Book Now</button>
+            </div>
+        </div>
+        <div class="satorini-tour-container-2">
+            <div class="satorini-tour">
+                <div class="tour-details-container">
+                    <div class="tour-details">
+                        <img src="icons/icons8-clock.svg" alt="">
+                        <p>7 Days / 6 Nights</p>
+                    </div>
+                    <div class="tour-details">
+                        <img src="icons/icons8-crowd-25.png" alt="">
+                        <p>Max 10</p>
+                        <img src="icons/icons8-region-25.png" alt="">
+                        <p>Malaysia</p>
+                    </div>
+                </div>
+                <h3>Tour to Santorini</h3>
+                <p class="tour-description">
+                    Discover the very best of the island during a thrilling sailing tour.<span class="hidden">Take part in one of the most spectacular Santorini day tours during a half-day morning, half-day sunset, or full-day private sailing tour.</span>
+                </p>
+                <p class="tour-cost orange-text">
+                    Price : $1300-$1500
+                </p>
+                <button class="btn-primary">Book Now</button>
+            </div>
+        </div>
+        <div class="satorini-tour-container-3">
+            <div class="satorini-tour">
+                <div class="tour-details-container">
+                    <div class="tour-details">
+                        <img src="icons/icons8-clock.svg" alt="">
+                        <p>7 Days / 6 Nights</p>
+                    </div>
+                    <div class="tour-details">
+                        <img src="icons/icons8-crowd-25.png" alt="">
+                        <p>Max 10</p>
+                        <img src="icons/icons8-region-25.png" alt="">
+                        <p>Malaysia</p>
+                    </div>
+                </div>
+                <h3>Tour to Santorini</h3>
+                <p class="tour-description">
+                    Discover the very best of the island during a thrilling sailing tour.<span class="hidden">Take part in one of the most spectacular Santorini day tours during a half-day morning, half-day sunset, or full-day private sailing tour.</span>
+                </p>
+                <p class="tour-cost orange-text">
+                    Price : $1300-$1500
+                </p>
+                <button class="btn-primary">Book Now</button>
+            </div>
+        </div>
+        <button class="Packages-btn">See All Packages</button>
+       </section>
+
+       <section class="place-section">
+        <div class="place-section-description">
+            <h1>A Simple Perfect Place</h1>
+            <h1>To Get Lost</h1>
+            <p>
+                This Cyclades island in the Aegean Sea looks like a place straight out of a fairy tale, with candy-colored houses carved into cliffs, sapphire waters, and chalk-white buildings topped with cobalt-blue domes.
+            </p>
+            <ul>
+                <li>Roam the peaceful black-sand beaches or stroll the streets of one of Santorini’s charming villages (start at Imerovigli). </li>
+                <li>And no matter where your day takes you, wind it down in beautiful Oia: It’s world-famous for its sunsets, which cycle through a kaleidoscope of colors in their spectacular nightly show.</li>
+            </ul>
+            <button class="btn-primary">See More</button>
+        </div>
+        <div class="mountain-video">
+            <h3 class="mntn">Watch Our Mountain in</h3>
+            <h3 class="bng">Bangladesh</h3>
+            <img class="bg-img" src="Images/Group 40089.png" alt="">
+            <div class="icons">
+                <img class="pause-icon" src="icons/icons8-pause-26.png" alt="">
+                <p>0:00</p>
+                <img class="mute-icon" src="icons/icons8-mute-24.png" alt="">
+                <img class="full-screen-icon" src="icons/icons8-full-screen-24.png" alt="">
+                <img class="menu-icon" src="icons/menu-icon.png" alt="">
+            </div>
+            <div class="horizontal-line">
+                <hr class="hr-1"> <hr class="hr-2">
+            </div>
+        </div>
+       </section>
+
+       <section class="subscription-section">
+            <div class="subscription-form">
+                <h3>Newsletter</h3>
+                <p>
+                    Get your daily dose of travel news & tips. <br> Sign up today!
+                </p>
+                <hr>
+                <div class="input-container">
+                    <input type="text" placeholder="Enter your name">
+                    <input type="email" placeholder="Enter your email">
+                    <button class="subscribe-btn">Subscribe</button>
+                </div>
+            </div>
+            <div class="subscription-discount">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <div>
+                    <h3>Travel.com</h3>
+                    <h1>Save up to 70%</h1>
+                </div>
+            </div>
+       </section>
     </main>
+    <footer>
+        <div>
+            <img src="Images/Group 40071 (2).png" alt="">
+            <h1>Hero <span class="orange-text">Travel</span></h1>
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. <br> Leo erat maecenas vitae elementum ultricies nullam. 
+        </p>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <hr>
+        </div>
+        <p>
+            2017, All Rights Reserved.
+        </p>
+    </footer>
 </body>
 
 </html>
