footer section finished

--- a/index.html
+++ b/index.html
@@ -284,23 +284,26 @@
        </section>
     </main>
     <footer>
-        <div>
-            <img src="Images/Group 40071 (2).png" alt="">
-            <h1>Hero <span class="orange-text">Travel</span></h1>
+        <div class="footer-container-1">
+            <div class="web-name">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h1>Hero <span class="orange-text">Travel</span></h1>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. <br> Leo erat maecenas vitae elementum ultricies nullam. 
+            </p>
+            <div class="social-meadia-icons">
+                <img src="icons/icons8-twitter-32.png" alt="">
+                <img src="icons/icons8-facebook.svg" alt="">
+                <img src="icons/icons8-instagram.svg" alt="">
+            </div>
         </div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. <br> Leo erat maecenas vitae elementum ultricies nullam. 
-        </p>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <hr>
+        <hr>
+        <div class="footer-container-2">
+            <p>
+                2017, All Rights Reserved.
+            </p>
         </div>
-        <p>
-            2017, All Rights Reserved.
-        </p>
     </footer>
 </body>
 
