--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <img src="Images/Group 40071 (2).png" alt="">
-            <h1>Hero <span class="orange-text">Travel</span></h1>
+            <h1>SM<span class="orange-text">Travel</span></h1>
             <!-- MOBILE SCREEN -->
             <label for="toggler"><i class="fa fa-bars"></i></label>
             <input type="checkbox" name="" id="toggler">
@@ -231,6 +231,23 @@
         <button class="Packages-btn">See All Packages</button>
        </section>
 
+       <section class="renowned-routes-section">
+        <div>
+            <h1>Follow the</h1>
+            <h1>renowned</h1>
+            <h1>Santorini Routes</h1>
+            <p>
+                Hit the hiking trails of Santorini to see the very best the island has to offer. Take scenic walks up and down the jagged coast, and unwrap the legends of the island. Visit traditional villages and learn the ways of local life.
+            </p>
+        </div>
+        <div>
+            <img src="Images/santorini-img-1.avif" alt="">
+        </div>
+        <div>
+            <img src="Images/santorini-img-2.jpeg" alt="">
+        </div>
+       </section>
+
        <section class="place-section">
         <div class="place-section-description">
             <h1>A Simple Perfect Place</h1>
@@ -286,11 +303,11 @@
     <footer>
         <div class="footer-container-1">
             <div class="web-name">
-                <img src="Images/Group 40071 (2).png" alt="">
-                <h1>Hero <span class="orange-text">Travel</span></h1>
+                <img class="footer-img" src="Images/Group 40071 (2).png" alt="">
+                <h1>SM<span class="orange-text">Travel</span></h1>
             </div>
             <p>
-                Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. <br> Leo erat maecenas vitae elementum ultricies nullam. 
+                Twenty years from now you will be more disappointed by the things you didn’t do than by the ones you did do. <br> So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.
             </p>
             <div class="social-meadia-icons">
                 <img src="icons/icons8-twitter-32.png" alt="">
